--- a/openai_analytics.ipynb
+++ b/openai_analytics.ipynb
@@ -9,26 +9,35 @@
     "import openai\n",
     "import os\n",
     "\n",
-    "openai.api_key = \"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\""
+    "openai.api_key = \"sk\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yo\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
     "dataset = []\n",
     "with open('spider-fine-tuning-sample-dataset.jsonl') as f:\n",
     "    for line in f:\n",
-    "        dataset.append(json.loads(line))\n"
+    "        dataset.append(json.loads(line))\n",
+    "print(\"yo\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,6 +58,153 @@
     "print(\"First example:\")\n",
     "for message in dataset[0][\"messages\"]:\n",
     "    print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No errors found\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "# Format error checks\n",
+    "format_errors = defaultdict(int)\n",
+    "\n",
+    "for ex in dataset:\n",
+    "    if not isinstance(ex, dict):\n",
+    "        format_errors[\"data_type\"] += 1\n",
+    "        continue\n",
+    "\n",
+    "    messages = ex.get(\"messages\", None)\n",
+    "    if not messages:\n",
+    "        format_errors[\"missing_messages_list\"] += 1\n",
+    "        continue\n",
+    "\n",
+    "    for message in messages:\n",
+    "        if \"role\" not in message or \"content\" not in message:\n",
+    "            format_errors[\"message_missing_key\"] += 1\n",
+    "\n",
+    "        if any(k not in (\"role\", \"content\", \"name\") for k in message):\n",
+    "            format_errors[\"message_unrecognized_key\"] += 1\n",
+    "\n",
+    "        if message.get(\"role\", None) not in (\"system\", \"user\", \"assistant\"):\n",
+    "            format_errors[\"unrecognized_role\"] += 1\n",
+    "\n",
+    "        content = message.get(\"content\", None)\n",
+    "        if not content or not isinstance(content, str):\n",
+    "            format_errors[\"missing_content\"] += 1\n",
+    "\n",
+    "    if not any(message.get(\"role\", None) == \"assistant\" for message in messages):\n",
+    "        format_errors[\"example_missing_assistant_message\"] += 1\n",
+    "\n",
+    "if format_errors:\n",
+    "    print(\"Found errors:\")\n",
+    "    for k, v in format_errors.items():\n",
+    "        print(f\"{k}: {v}\")\n",
+    "else:\n",
+    "    print(\"No errors found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tiktoken\n",
+    "import numpy as np\n",
+    "# Token counting functions\n",
+    "encoding = tiktoken.get_encoding(\"cl100k_base\")\n",
+    "\n",
+    "# not exact!\n",
+    "# simplified from https://github.com/openai/openai-cookbook/blob/main/examples/How_to_count_tokens_with_tiktoken.ipynb\n",
+    "def num_tokens_from_messages(messages, tokens_per_message=3, tokens_per_name=1):\n",
+    "    num_tokens = 0\n",
+    "    for message in messages:\n",
+    "        num_tokens += tokens_per_message\n",
+    "        for key, value in message.items():\n",
+    "            num_tokens += len(encoding.encode(value))\n",
+    "            if key == \"name\":\n",
+    "                num_tokens += tokens_per_name\n",
+    "    num_tokens += 3\n",
+    "    return num_tokens\n",
+    "\n",
+    "def num_assistant_tokens_from_messages(messages):\n",
+    "    num_tokens = 0\n",
+    "    for message in messages:\n",
+    "        if message[\"role\"] == \"assistant\":\n",
+    "            num_tokens += len(encoding.encode(message[\"content\"]))\n",
+    "    return num_tokens\n",
+    "\n",
+    "def print_distribution(values, name):\n",
+    "    print(f\"\\n#### Distribution of {name}:\")\n",
+    "    print(f\"min / max: {min(values)}, {max(values)}\")\n",
+    "    print(f\"mean / median: {np.mean(values)}, {np.median(values)}\")\n",
+    "    print(f\"p5 / p95: {np.quantile(values, 0.1)}, {np.quantile(values, 0.9)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num examples missing system message: 0\n",
+      "Num examples missing user message: 0\n",
+      "\n",
+      "#### Distribution of num_messages_per_example:\n",
+      "min / max: 3, 3\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 20\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mNum examples missing system message:\u001b[39m\u001b[39m\"\u001b[39m, n_missing_system)\n\u001b[1;32m     19\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mNum examples missing user message:\u001b[39m\u001b[39m\"\u001b[39m, n_missing_user)\n\u001b[0;32m---> 20\u001b[0m print_distribution(n_messages, \u001b[39m\"\u001b[39;49m\u001b[39mnum_messages_per_example\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m     21\u001b[0m print_distribution(convo_lens, \u001b[39m\"\u001b[39m\u001b[39mnum_total_tokens_per_example\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     22\u001b[0m print_distribution(assistant_message_lens, \u001b[39m\"\u001b[39m\u001b[39mnum_assistant_tokens_per_example\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[5], line 28\u001b[0m, in \u001b[0;36mprint_distribution\u001b[0;34m(values, name)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m#### Distribution of \u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     27\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmin / max: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mmin\u001b[39m(values)\u001b[39m}\u001b[39;00m\u001b[39m, \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mmax\u001b[39m(values)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 28\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmean / median: \u001b[39m\u001b[39m{\u001b[39;00mnp\u001b[39m.\u001b[39mmean(values)\u001b[39m}\u001b[39;00m\u001b[39m, \u001b[39m\u001b[39m{\u001b[39;00mnp\u001b[39m.\u001b[39mmedian(values)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     29\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mp5 / p95: \u001b[39m\u001b[39m{\u001b[39;00mnp\u001b[39m.\u001b[39mquantile(values,\u001b[39m \u001b[39m\u001b[39m0.1\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m, \u001b[39m\u001b[39m{\u001b[39;00mnp\u001b[39m.\u001b[39mquantile(values,\u001b[39m \u001b[39m\u001b[39m0.9\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Warnings and tokens counts\n",
+    "n_missing_system = 0\n",
+    "n_missing_user = 0\n",
+    "n_messages = []\n",
+    "convo_lens = []\n",
+    "assistant_message_lens = []\n",
+    "\n",
+    "for ex in dataset:\n",
+    "    messages = ex[\"messages\"]\n",
+    "    if not any(message[\"role\"] == \"system\" for message in messages):\n",
+    "        n_missing_system += 1\n",
+    "    if not any(message[\"role\"] == \"user\" for message in messages):\n",
+    "        n_missing_user += 1\n",
+    "    n_messages.append(len(messages))\n",
+    "    convo_lens.append(num_tokens_from_messages(messages))\n",
+    "    assistant_message_lens.append(num_assistant_tokens_from_messages(messages))\n",
+    "\n",
+    "print(\"Num examples missing system message:\", n_missing_system)\n",
+    "print(\"Num examples missing user message:\", n_missing_user)\n",
+    "print_distribution(n_messages, \"num_messages_per_example\")\n",
+    "print_distribution(convo_lens, \"num_total_tokens_per_example\")\n",
+    "print_distribution(assistant_message_lens, \"num_assistant_tokens_per_example\")\n",
+    "n_too_long = sum(l > 4096 for l in convo_lens)\n",
+    "print(f\"\\n{n_too_long} examples may be over the 4096 token limit, they will be truncated during fine-tuning\")"
    ]
   },
   {
