--- a/openai_analytics.ipynb
+++ b/openai_analytics.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -164,19 +164,21 @@
       "Num examples missing user message: 0\n",
       "\n",
       "#### Distribution of num_messages_per_example:\n",
-      "min / max: 3, 3\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 20\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mNum examples missing system message:\u001b[39m\u001b[39m\"\u001b[39m, n_missing_system)\n\u001b[1;32m     19\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mNum examples missing user message:\u001b[39m\u001b[39m\"\u001b[39m, n_missing_user)\n\u001b[0;32m---> 20\u001b[0m print_distribution(n_messages, \u001b[39m\"\u001b[39;49m\u001b[39mnum_messages_per_example\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m     21\u001b[0m print_distribution(convo_lens, \u001b[39m\"\u001b[39m\u001b[39mnum_total_tokens_per_example\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     22\u001b[0m print_distribution(assistant_message_lens, \u001b[39m\"\u001b[39m\u001b[39mnum_assistant_tokens_per_example\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[5], line 28\u001b[0m, in \u001b[0;36mprint_distribution\u001b[0;34m(values, name)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m#### Distribution of \u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     27\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmin / max: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mmin\u001b[39m(values)\u001b[39m}\u001b[39;00m\u001b[39m, \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mmax\u001b[39m(values)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 28\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmean / median: \u001b[39m\u001b[39m{\u001b[39;00mnp\u001b[39m.\u001b[39mmean(values)\u001b[39m}\u001b[39;00m\u001b[39m, \u001b[39m\u001b[39m{\u001b[39;00mnp\u001b[39m.\u001b[39mmedian(values)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     29\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mp5 / p95: \u001b[39m\u001b[39m{\u001b[39;00mnp\u001b[39m.\u001b[39mquantile(values,\u001b[39m \u001b[39m\u001b[39m0.1\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m, \u001b[39m\u001b[39m{\u001b[39;00mnp\u001b[39m.\u001b[39mquantile(values,\u001b[39m \u001b[39m\u001b[39m0.9\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+      "min / max: 3, 3\n",
+      "mean / median: 3.0, 3.0\n",
+      "p5 / p95: 3.0, 3.0\n",
+      "\n",
+      "#### Distribution of num_total_tokens_per_example:\n",
+      "min / max: 3219, 4018\n",
+      "mean / median: 3891.0655, 3911.5\n",
+      "p5 / p95: 3766.0, 3996.0\n",
+      "\n",
+      "#### Distribution of num_assistant_tokens_per_example:\n",
+      "min / max: 44, 206\n",
+      "mean / median: 78.3795, 65.0\n",
+      "p5 / p95: 50.0, 121.0\n",
+      "\n",
+      "0 examples may be over the 4096 token limit, they will be truncated during fine-tuning\n"
      ]
     }
    ],
@@ -205,6 +207,46 @@
     "print_distribution(assistant_message_lens, \"num_assistant_tokens_per_example\")\n",
     "n_too_long = sum(l > 4096 for l in convo_lens)\n",
     "print(f\"\\n{n_too_long} examples may be over the 4096 token limit, they will be truncated during fine-tuning\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset has ~7782131 tokens that will be charged for during training\n",
+      "By default, you'll train for 1 epochs on this dataset\n",
+      "By default, you'll be charged for ~7782131 tokens\n",
+      "See pricing page to estimate total costs\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pricing and default n_epochs estimate\n",
+    "MAX_TOKENS_PER_EXAMPLE = 4096\n",
+    "\n",
+    "TARGET_EPOCHS = 1\n",
+    "MIN_TARGET_EXAMPLES = 100\n",
+    "MAX_TARGET_EXAMPLES = 25000\n",
+    "MIN_DEFAULT_EPOCHS = 3\n",
+    "MAX_DEFAULT_EPOCHS = 25\n",
+    "\n",
+    "n_epochs = TARGET_EPOCHS\n",
+    "n_train_examples = len(dataset)\n",
+    "if n_train_examples * TARGET_EPOCHS < MIN_TARGET_EXAMPLES:\n",
+    "    n_epochs = min(MAX_DEFAULT_EPOCHS, MIN_TARGET_EXAMPLES // n_train_examples)\n",
+    "elif n_train_examples * TARGET_EPOCHS > MAX_TARGET_EXAMPLES:\n",
+    "    n_epochs = max(MIN_DEFAULT_EPOCHS, MAX_TARGET_EXAMPLES // n_train_examples)\n",
+    "\n",
+    "n_billing_tokens_in_dataset = sum(min(MAX_TOKENS_PER_EXAMPLE, length) for length in convo_lens)\n",
+    "print(f\"Dataset has ~{n_billing_tokens_in_dataset} tokens that will be charged for during training\")\n",
+    "print(f\"By default, you'll train for {n_epochs} epochs on this dataset\")\n",
+    "print(f\"By default, you'll be charged for ~{n_epochs * n_billing_tokens_in_dataset} tokens\")\n",
+    "print(\"See pricing page to estimate total costs\")\n"
    ]
   },
   {
