--- a/openai_analytics.ipynb
+++ b/openai_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -33,22 +33,25 @@
     "#     for line in f:\n",
     "#         dataset.append(json.loads(line))\n",
     "\n",
-    "with open('lamini/train_oai_format.json') as f:\n",
+    "with open('lamini/validation_oai_format.json') as f:\n",
     "  dataset = json.load(f)\n",
     "print(\"yo\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num examples: 7000\n",
-      "First example:\n"
+      "Num examples: 1034\n",
+      "First example:\n",
+      "{'role': 'system', 'content': 'You are a powerful text-to-SQL model. Here is a database schema:\\nstadium :\\nStadium_ID [ INT ] primary_key\\nLocation [ TEXT ]\\nName [ TEXT ]\\nCapacity [ INT ]\\nHighest [ INT ]\\nLowest [ INT ]\\nAverage [ INT ]\\n\\nsinger :\\nSinger_ID [ INT ] primary_key\\nName [ TEXT ]\\nCountry [ TEXT ]\\nSong_Name [ TEXT ]\\nSong_release_year [ TEXT ]\\nAge [ INT ]\\nIs_male [ bool ]\\n\\nconcert :\\nconcert_ID [ INT ] primary_key\\nconcert_Name [ TEXT ]\\nTheme [ TEXT ]\\nStadium_ID [ TEXT ] concert.Stadium_ID = stadium.Stadium_ID\\nYear [ TEXT ]\\n\\nsinger_in_concert :\\nconcert_ID [ INT ] primary_key singer_in_concert.concert_ID = concert.concert_ID\\nSinger_ID [ TEXT ] singer_in_concert.Singer_ID = singer.Singer_ID'}\n",
+      "{'role': 'user', 'content': 'Write an SQL query that answers the following: How many singers do we have?'}\n",
+      "{'role': 'assistant', 'content': 'SELECT count(*) FROM singer;'}\n"
      ]
     }
    ],
@@ -56,21 +59,20 @@
     "# Initial dataset stats\n",
     "print(\"Num examples:\", len(dataset))\n",
     "print(\"First example:\")\n",
-    "# for message in dataset[0][\"messages\"]:\n",
-    "#     print(message)"
+    "for message in dataset[0][\"messages\"]:\n",
+    "    print(message)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found errors:\n",
-      "missing_messages_list: 7000\n"
+      "No errors found\n"
      ]
     }
    ],
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -170,14 +172,14 @@
       "p5 / p95: 3.0, 3.0\n",
       "\n",
       "#### Distribution of num_total_tokens_per_example:\n",
-      "min / max: 3219, 4018\n",
-      "mean / median: 3891.0655, 3911.5\n",
-      "p5 / p95: 3766.0, 3996.0\n",
+      "min / max: 127, 679\n",
+      "mean / median: 273.88974854932303, 235.0\n",
+      "p5 / p95: 158.60000000000002, 468.0\n",
       "\n",
       "#### Distribution of num_assistant_tokens_per_example:\n",
-      "min / max: 44, 206\n",
-      "mean / median: 78.3795, 65.0\n",
-      "p5 / p95: 50.0, 121.0\n",
+      "min / max: 5, 130\n",
+      "mean / median: 30.908123791102515, 22.0\n",
+      "p5 / p95: 11.0, 58.0\n",
       "\n",
       "0 examples may be over the 4096 token limit, they will be truncated during fine-tuning\n"
      ]
@@ -212,16 +214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset has ~7782131 tokens that will be charged for during training\n",
+      "Dataset has ~283202 tokens that will be charged for during training\n",
       "By default, you'll train for 1 epochs on this dataset\n",
-      "By default, you'll be charged for ~7782131 tokens\n",
+      "By default, you'll be charged for ~283202 tokens\n",
       "See pricing page to estimate total costs\n"
      ]
     }
@@ -231,6 +233,46 @@
     "MAX_TOKENS_PER_EXAMPLE = 4096\n",
     "\n",
     "TARGET_EPOCHS = 1\n",
+    "MIN_TARGET_EXAMPLES = 100\n",
+    "MAX_TARGET_EXAMPLES = 25000\n",
+    "MIN_DEFAULT_EPOCHS = 3\n",
+    "MAX_DEFAULT_EPOCHS = 25\n",
+    "\n",
+    "n_epochs = TARGET_EPOCHS\n",
+    "n_train_examples = len(dataset)\n",
+    "if n_train_examples * TARGET_EPOCHS < MIN_TARGET_EXAMPLES:\n",
+    "    n_epochs = min(MAX_DEFAULT_EPOCHS, MIN_TARGET_EXAMPLES // n_train_examples)\n",
+    "elif n_train_examples * TARGET_EPOCHS > MAX_TARGET_EXAMPLES:\n",
+    "    n_epochs = max(MIN_DEFAULT_EPOCHS, MAX_TARGET_EXAMPLES // n_train_examples)\n",
+    "\n",
+    "n_billing_tokens_in_dataset = sum(min(MAX_TOKENS_PER_EXAMPLE, length) for length in convo_lens)\n",
+    "print(f\"Dataset has ~{n_billing_tokens_in_dataset} tokens that will be charged for during training\")\n",
+    "print(f\"By default, you'll train for {n_epochs} epochs on this dataset\")\n",
+    "print(f\"By default, you'll be charged for ~{n_epochs * n_billing_tokens_in_dataset} tokens\")\n",
+    "print(\"See pricing page to estimate total costs\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset has ~283202 tokens that will be charged for during training\n",
+      "By default, you'll train for 3 epochs on this dataset\n",
+      "By default, you'll be charged for ~849606 tokens\n",
+      "See pricing page to estimate total costs\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pricing and default n_epochs estimate\n",
+    "MAX_TOKENS_PER_EXAMPLE = 4096\n",
+    "\n",
+    "TARGET_EPOCHS = 3\n",
     "MIN_TARGET_EXAMPLES = 100\n",
     "MAX_TARGET_EXAMPLES = 25000\n",
     "MIN_DEFAULT_EPOCHS = 3\n",
