--- a/lamini/convert_to_openai_format.ipynb
+++ b/lamini/convert_to_openai_format.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
       "\n",
       "Please write me a SQL statement that answers the following question: How many heads of the departments are older than 56 ? [/INST]\n",
       "A:\n",
-      "You are a powerful text-to-SQL model. Here is a database schema:\n",
+      "You are a powerful text-to-SQL model.Here is a database schema:\n",
       "department :\n",
       "Department_ID [ INT ] primary_key\n",
       "Name [ TEXT ]\n",
@@ -89,7 +89,7 @@
       "head_ID [ INT ] management.head_ID = head.head_ID\n",
       "temporary_acting [ TEXT ]\n",
       "B:\n",
-      "Write an SQL query that answers the following. Respond with only SQL: How many heads of the departments are older than 56 ?\n"
+      "Write an SQL query that answers the following: How many heads of the departments are older than 56 ?\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
     "    parts = clean_str.rsplit(\"\\n\\n\", 1)\n",
     "    schema = parts[0].strip()\n",
     "    query = parts[1].strip()\n",
-    "    system_prompt = \"You are a powerful text-to-SQL model. \" + schema\n",
+    "    system_prompt = \"You are a powerful text-to-SQL model.\" + schema\n",
     "    return system_prompt, query\n",
     "\n",
     "print(train[0]['input'])\n",
