add llama generate gold script

--- a/lamini/convert_to_llama_format.ipynb
+++ b/lamini/convert_to_llama_format.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "def clean_input(input_str):\n",
     "    # Remove the [INST] and [/INST] tags\n",
-    "    clean_str = input_str.replace(\"[INST]\", \"\").replace(\"[/INST]\", \"\").replace(\"Please write me a SQL statement that answers the following question\", \"Write an SQL query that answers the following\") \n",
+    "    clean_str = input_str.replace(\"[INST]\", \"\").replace(\"[/INST]\", \"\").replace(\"Please write me a SQL statement that answers the following question\", \"Write an SQL query that answers the following. Please respond with only SQL\") \n",
     "    # Split the cleaned string into two parts: schema and query, based on two newline characters\n",
     "    # parts = clean_str.rsplit(\"\\n\\n\", 1)\n",
     "    # schema = parts[0].strip()\n",
