--- a/lamini/convert_to_llama_format.ipynb
+++ b/lamini/convert_to_llama_format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        " 'output': 'SELECT count(*) FROM head WHERE age  >  56;'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,8 @@
       "head_ID [ INT ] management.head_ID = head.head_ID\n",
       "temporary_acting [ TEXT ]\n",
       "\n",
-      "Write an SQL query that answers the following: How many heads of the departments are older than 56 ? \n"
+      "Write an SQL query that answers the following: How many heads of the departments are older than 56 ? \n",
+      "### Response:\n"
      ]
     }
    ],
@@ -87,12 +88,12 @@
     "\n",
     "def clean_input(input_str):\n",
     "    # Remove the [INST] and [/INST] tags\n",
-    "    clean_str = input_str.replace(\"[INST]\", \"\").replace(\"[/INST]\", \"\").replace(\"Please write me a SQL statement that answers the following question\", \"Write an SQL query that answers the following. Please respond with only SQL\") \n",
+    "    clean_str = input_str.replace(\"[INST]\", \"\").replace(\"[/INST]\", \"\").replace(\"Please write me a SQL statement that answers the following question\", \"Write an SQL query that answers the following\") \n",
     "    # Split the cleaned string into two parts: schema and query, based on two newline characters\n",
     "    # parts = clean_str.rsplit(\"\\n\\n\", 1)\n",
     "    # schema = parts[0].strip()\n",
     "    # query = parts[1].strip()\n",
-    "    output = \"You are a powerful text-to-SQL model.\" + clean_str\n",
+    "    output = \"You are a powerful text-to-SQL model.\" + clean_str + \"\\n### Response:\"\n",
     "    return output\n",
     "\n",
     "# print(train[0]['input'])\n",
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,17 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'input': 'You are a powerful text-to-SQL model. Here is a database schema:\\nstadium :\\nStadium_ID [ INT ] primary_key\\nLocation [ TEXT ]\\nName [ TEXT ]\\nCapacity [ INT ]\\nHighest [ INT ]\\nLowest [ INT ]\\nAverage [ INT ]\\n\\nsinger :\\nSinger_ID [ INT ] primary_key\\nName [ TEXT ]\\nCountry [ TEXT ]\\nSong_Name [ TEXT ]\\nSong_release_year [ TEXT ]\\nAge [ INT ]\\nIs_male [ bool ]\\n\\nconcert :\\nconcert_ID [ INT ] primary_key\\nconcert_Name [ TEXT ]\\nTheme [ TEXT ]\\nStadium_ID [ TEXT ] concert.Stadium_ID = stadium.Stadium_ID\\nYear [ TEXT ]\\n\\nsinger_in_concert :\\nconcert_ID [ INT ] primary_key singer_in_concert.concert_ID = concert.concert_ID\\nSinger_ID [ TEXT ] singer_in_concert.Singer_ID = singer.Singer_ID\\n\\nWrite an SQL query that answers the following: How many singers do we have? ',\n",
+       "{'input': 'You are a powerful text-to-SQL model. Here is a database schema:\\nstadium :\\nStadium_ID [ INT ] primary_key\\nLocation [ TEXT ]\\nName [ TEXT ]\\nCapacity [ INT ]\\nHighest [ INT ]\\nLowest [ INT ]\\nAverage [ INT ]\\n\\nsinger :\\nSinger_ID [ INT ] primary_key\\nName [ TEXT ]\\nCountry [ TEXT ]\\nSong_Name [ TEXT ]\\nSong_release_year [ TEXT ]\\nAge [ INT ]\\nIs_male [ bool ]\\n\\nconcert :\\nconcert_ID [ INT ] primary_key\\nconcert_Name [ TEXT ]\\nTheme [ TEXT ]\\nStadium_ID [ TEXT ] concert.Stadium_ID = stadium.Stadium_ID\\nYear [ TEXT ]\\n\\nsinger_in_concert :\\nconcert_ID [ INT ] primary_key singer_in_concert.concert_ID = concert.concert_ID\\nSinger_ID [ TEXT ] singer_in_concert.Singer_ID = singer.Singer_ID\\n\\nWrite an SQL query that answers the following: How many singers do we have? \\n### Response:',\n",
        " 'output': 'SELECT count(*) FROM singer;'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
