updating files well

--- a/spider-create-context-intersect/convert_spider_to_dev_gold_sql_file.ipynb
+++ b/spider-create-context-intersect/convert_spider_to_dev_gold_sql_file.ipynb
@@ -13,7 +13,7 @@
     "    data = json.load(f)\n",
     "\n",
     "# Step 2: Open a text file in write mode\n",
-    "with open('spider_create_context_gold.sql', 'w') as f:\n",
+    "with open('spider_create_context_gold-568.sql', 'w') as f:\n",
     "    # Step 3: Loop over the objects in the JSON file and write each \"answer\" to the text file\n",
     "    for item in data:\n",
     "        answer = item.get('answer')\n",
@@ -28,13 +28,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('test_predicted.txt', 'w') as f:\n",
-    "    # Step 3: Loop over the objects in the JSON file and write each \"answer\" to the text file\n",
-    "    for item in data:\n",
-    "        answer = item.get('answer')\n",
-    "        db_id = item.get('db_id')\n",
-    "        if answer:\n",
-    "            f.write(answer + '\\n')"
+    "# with open('test_predicted.txt', 'w') as f:\n",
+    "#     # Step 3: Loop over the objects in the JSON file and write each \"answer\" to the text file\n",
+    "#     for item in data:\n",
+    "#         answer = item.get('answer')\n",
+    "#         db_id = item.get('db_id')\n",
+    "#         if answer:\n",
+    "#             f.write(answer + '\\n')"
    ]
   },
   {
