--- a/openai/convert_to_openai_format.ipynb
+++ b/openai/convert_to_openai_format.ipynb
@@ -2,34 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
     "\n",
-    "with open('train.json') as f:\n",
+    "with open('../spider-create-context-intersect/spider_create_context_train_db_id.json') as f:\n",
     "  train = json.load(f)\n",
     "\n",
-    "with open('validation.json') as f:\n",
+    "with open('../spider-create-context-intersect/spider_create_context_val_db_id.json') as f:\n",
     "  validation = json.load(f)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'input': '[INST] Here is a database schema:\\ndepartment :\\nDepartment_ID [ INT ] primary_key\\nName [ TEXT ]\\nCreation [ TEXT ]\\nRanking [ INT ]\\nBudget_in_Billions [ INT ]\\nNum_Employees [ INT ]\\n\\nhead :\\nhead_ID [ INT ] primary_key\\nname [ TEXT ]\\nborn_state [ TEXT ]\\nage [ INT ]\\n\\nmanagement :\\ndepartment_ID [ INT ] primary_key management.department_ID = department.Department_ID\\nhead_ID [ INT ] management.head_ID = head.head_ID\\ntemporary_acting [ TEXT ]\\n\\nPlease write me a SQL statement that answers the following question: How many heads of the departments are older than 56 ? [/INST]',\n",
-       " 'output': 'SELECT count(*) FROM head WHERE age  >  56;'}"
+       "{'question': 'How many heads of the departments are older than 56 ?',\n",
+       " 'context': 'CREATE TABLE head (age INTEGER)',\n",
+       " 'answer': 'SELECT count(*) FROM head WHERE age  >  56',\n",
+       " 'db_id': 'department_management'}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,86 +42,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INST] Here is a database schema:\n",
-      "department :\n",
-      "Department_ID [ INT ] primary_key\n",
-      "Name [ TEXT ]\n",
-      "Creation [ TEXT ]\n",
-      "Ranking [ INT ]\n",
-      "Budget_in_Billions [ INT ]\n",
-      "Num_Employees [ INT ]\n",
-      "\n",
-      "head :\n",
-      "head_ID [ INT ] primary_key\n",
-      "name [ TEXT ]\n",
-      "born_state [ TEXT ]\n",
-      "age [ INT ]\n",
-      "\n",
-      "management :\n",
-      "department_ID [ INT ] primary_key management.department_ID = department.Department_ID\n",
-      "head_ID [ INT ] management.head_ID = head.head_ID\n",
-      "temporary_acting [ TEXT ]\n",
-      "\n",
-      "Please write me a SQL statement that answers the following question: How many heads of the departments are older than 56 ? [/INST]\n",
-      "A:\n",
-      "You are a powerful text-to-SQL model.Here is a database schema:\n",
-      "department :\n",
-      "Department_ID [ INT ] primary_key\n",
-      "Name [ TEXT ]\n",
-      "Creation [ TEXT ]\n",
-      "Ranking [ INT ]\n",
-      "Budget_in_Billions [ INT ]\n",
-      "Num_Employees [ INT ]\n",
-      "\n",
-      "head :\n",
-      "head_ID [ INT ] primary_key\n",
-      "name [ TEXT ]\n",
-      "born_state [ TEXT ]\n",
-      "age [ INT ]\n",
-      "\n",
-      "management :\n",
-      "department_ID [ INT ] primary_key management.department_ID = department.Department_ID\n",
-      "head_ID [ INT ] management.head_ID = head.head_ID\n",
-      "temporary_acting [ TEXT ]\n",
-      "B:\n",
-      "Write an SQL query that answers the following: How many heads of the departments are older than 56 ?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# def input_text_to_system_and_user_prompt(input_text):\n",
     "#   system_prompt = \"System: \" + input_text + \" User:\"\n",
     "#   user_prompt = \"System: \" + input_text + \" User:\"\n",
     "#   return system_prompt, user_prompt\n",
     "\n",
-    "def input_text_to_system_and_user_prompt(input_str):\n",
-    "    # Remove the [INST] and [/INST] tags\n",
-    "    clean_str = input_str.replace(\"[INST]\", \"\").replace(\"[/INST]\", \"\").replace(\"Please write me a SQL statement that answers the following question\", \"Write an SQL query that answers the following\") \n",
-    "    # Split the cleaned string into two parts: schema and query, based on two newline characters\n",
-    "    parts = clean_str.rsplit(\"\\n\\n\", 1)\n",
-    "    schema = parts[0].strip()\n",
-    "    query = parts[1].strip()\n",
-    "    system_prompt = \"You are a powerful text-to-SQL model.\" + schema\n",
-    "    return system_prompt, query\n",
+    "# def input_text_to_system_and_user_prompt(input_str):\n",
+    "#     # Remove the [INST] and [/INST] tags\n",
+    "#     clean_str = input_str.replace(\"[INST]\", \"\").replace(\"[/INST]\", \"\").replace(\"Please write me a SQL statement that answers the following question\", \"Write an SQL query that answers the following\") \n",
+    "#     # Split the cleaned string into two parts: schema and query, based on two newline characters\n",
+    "#     parts = clean_str.rsplit(\"\\n\\n\", 1)\n",
+    "#     schema = parts[0].strip()\n",
+    "#     query = parts[1].strip()\n",
+    "#     system_prompt = \"You are a powerful text-to-SQL model.\" + schema\n",
+    "#     return system_prompt, query\n",
     "\n",
-    "print(train[0]['input'])\n",
-    "a, b = input_text_to_system_and_user_prompt(train[0]['input'])\n",
-    "print(\"A:\")\n",
-    "print(a)\n",
-    "print(\"B:\")\n",
-    "print(b)\n"
+    "# print(train[0]['input'])\n",
+    "# a, b = input_text_to_system_and_user_prompt(train[0]['input'])\n",
+    "# print(\"A:\")\n",
+    "# print(a)\n",
+    "# print(\"B:\")\n",
+    "# print(b)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def system_prompt_from_context(context):\n",
+    "    return f\"\"\"You are a powerful text-to-SQL model. Your job is to answer questions about a database. You are given a question and context regarding one or more tables.\n",
+    "\n",
+    "You must output the SQL query that answers the question.\n",
+    "\n",
+    "### Context:\n",
+    "{context}\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,8 +94,7 @@
     "    \"\"\"\n",
     "    Converts the data to OpenAI format.\n",
     "    \"\"\"\n",
-    "    system_prompt, user_prompt = input_text_to_system_and_user_prompt(data_point['input'])\n",
-    "    assistant_response = data_point['output']\n",
+    "    system_prompt = system_prompt_from_context(data_point['context']) \n",
     "    return {\"messages\": [\n",
     "        {\n",
     "            \"role\": \"system\",\n",
@@ -136,11 +102,11 @@
     "        },\n",
     "        {\n",
     "            \"role\": \"user\",\n",
-    "            \"content\": user_prompt\n",
+    "            \"content\": data_point['question']\n",
     "        },\n",
     "        {\n",
     "            \"role\": \"assistant\",\n",
-    "            \"content\": assistant_response\n",
+    "            \"content\": data_point['answer']\n",
     "        }\n",
     "    ]}\n",
     "            \n",
@@ -154,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,20 +144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'messages': [{'role': 'system',\n",
-       "   'content': 'You are a powerful text-to-SQL model. Here is a database schema:\\nstadium :\\nStadium_ID [ INT ] primary_key\\nLocation [ TEXT ]\\nName [ TEXT ]\\nCapacity [ INT ]\\nHighest [ INT ]\\nLowest [ INT ]\\nAverage [ INT ]\\n\\nsinger :\\nSinger_ID [ INT ] primary_key\\nName [ TEXT ]\\nCountry [ TEXT ]\\nSong_Name [ TEXT ]\\nSong_release_year [ TEXT ]\\nAge [ INT ]\\nIs_male [ bool ]\\n\\nconcert :\\nconcert_ID [ INT ] primary_key\\nconcert_Name [ TEXT ]\\nTheme [ TEXT ]\\nStadium_ID [ TEXT ] concert.Stadium_ID = stadium.Stadium_ID\\nYear [ TEXT ]\\n\\nsinger_in_concert :\\nconcert_ID [ INT ] primary_key singer_in_concert.concert_ID = concert.concert_ID\\nSinger_ID [ TEXT ] singer_in_concert.Singer_ID = singer.Singer_ID'},\n",
-       "  {'role': 'user',\n",
-       "   'content': 'Write an SQL query that answers the following. Respond with only SQL: How many singers do we have?'},\n",
-       "  {'role': 'assistant', 'content': 'SELECT count(*) FROM singer;'}]}"
+       "   'content': 'You are a powerful text-to-SQL model. Your job is to answer questions about a database. You are given a question and context regarding one or more tables.\\n\\nYou must output the SQL query that answers the question.\\n\\n### Context:\\nCREATE TABLE singer (Id VARCHAR)'},\n",
+       "  {'role': 'user', 'content': 'How many singers do we have?'},\n",
+       "  {'role': 'assistant', 'content': 'SELECT count(*) FROM singer'}]}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,6 +178,13 @@
     "with open('validation_oai_format.json', 'w') as f:\n",
     "    json.dump(converted_validation, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
