--- a/openai/openai_dataset_analytics.ipynb
+++ b/openai/openai_dataset_analytics.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -33,25 +33,25 @@
     "#     for line in f:\n",
     "#         dataset.append(json.loads(line))\n",
     "\n",
-    "with open('lamini/validation_oai_format.json') as f:\n",
+    "with open('validation_oai_format.json') as f:\n",
     "  dataset = json.load(f)\n",
     "print(\"yo\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num examples: 1034\n",
+      "Num examples: 568\n",
       "First example:\n",
-      "{'role': 'system', 'content': 'You are a powerful text-to-SQL model. Here is a database schema:\\nstadium :\\nStadium_ID [ INT ] primary_key\\nLocation [ TEXT ]\\nName [ TEXT ]\\nCapacity [ INT ]\\nHighest [ INT ]\\nLowest [ INT ]\\nAverage [ INT ]\\n\\nsinger :\\nSinger_ID [ INT ] primary_key\\nName [ TEXT ]\\nCountry [ TEXT ]\\nSong_Name [ TEXT ]\\nSong_release_year [ TEXT ]\\nAge [ INT ]\\nIs_male [ bool ]\\n\\nconcert :\\nconcert_ID [ INT ] primary_key\\nconcert_Name [ TEXT ]\\nTheme [ TEXT ]\\nStadium_ID [ TEXT ] concert.Stadium_ID = stadium.Stadium_ID\\nYear [ TEXT ]\\n\\nsinger_in_concert :\\nconcert_ID [ INT ] primary_key singer_in_concert.concert_ID = concert.concert_ID\\nSinger_ID [ TEXT ] singer_in_concert.Singer_ID = singer.Singer_ID'}\n",
-      "{'role': 'user', 'content': 'Write an SQL query that answers the following: How many singers do we have?'}\n",
-      "{'role': 'assistant', 'content': 'SELECT count(*) FROM singer;'}\n"
+      "{'role': 'system', 'content': 'You are a powerful text-to-SQL model. Your job is to answer questions about a database. You are given a question and context regarding one or more tables.\\n\\nYou must output the SQL query that answers the question.\\n\\n### Context:\\nCREATE TABLE singer (Id VARCHAR)'}\n",
+      "{'role': 'user', 'content': 'How many singers do we have?'}\n",
+      "{'role': 'assistant', 'content': 'SELECT count(*) FROM singer'}\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -172,14 +172,14 @@
       "p5 / p95: 3.0, 3.0\n",
       "\n",
       "#### Distribution of num_total_tokens_per_example:\n",
-      "min / max: 127, 679\n",
-      "mean / median: 273.88974854932303, 235.0\n",
-      "p5 / p95: 158.60000000000002, 468.0\n",
+      "min / max: 79, 256\n",
+      "mean / median: 125.63028169014085, 117.0\n",
+      "p5 / p95: 90.7, 169.3\n",
       "\n",
       "#### Distribution of num_assistant_tokens_per_example:\n",
-      "min / max: 5, 130\n",
-      "mean / median: 30.908123791102515, 22.0\n",
-      "p5 / p95: 11.0, 58.0\n",
+      "min / max: 4, 130\n",
+      "mean / median: 30.996478873239436, 21.0\n",
+      "p5 / p95: 10.0, 58.0\n",
       "\n",
       "0 examples may be over the 4096 token limit, they will be truncated during fine-tuning\n"
      ]
@@ -214,16 +214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset has ~283202 tokens that will be charged for during training\n",
+      "Dataset has ~71358 tokens that will be charged for during training\n",
       "By default, you'll train for 1 epochs on this dataset\n",
-      "By default, you'll be charged for ~283202 tokens\n",
+      "By default, you'll be charged for ~71358 tokens\n",
       "See pricing page to estimate total costs\n"
      ]
     }
