open ai job done

--- a/openai/convert_dataset_to_openai_format.ipynb
+++ b/openai/convert_dataset_to_openai_format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "  {'role': 'assistant', 'content': 'SELECT count(*) FROM singer'}]}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,16 +167,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save each as a separate file\n",
-    "with open('train_oai_format.json', 'w') as f:\n",
-    "    json.dump(converted_train, f)\n",
+    "# # Save each as a separate file\n",
+    "# with open('train_oai_format.json', 'w') as f:\n",
+    "#     json.dump(converted_train, f)\n",
     "\n",
-    "with open('validation_oai_format.json', 'w') as f:\n",
-    "    json.dump(converted_validation, f)"
+    "# with open('validation_oai_format.json', 'w') as f:\n",
+    "#     json.dump(converted_validation, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('train_oai_format.jsonl', 'w') as f:\n",
+    "    for item in converted_train:\n",
+    "        json.dump(item, f)\n",
+    "        f.write('\\n')\n",
+    "\n",
+    "with open('validation_oai_format.jsonl', 'w') as f:\n",
+    "    for item in converted_validation:\n",
+    "        json.dump(item, f)\n",
+    "        f.write('\\n')"
    ]
   },
   {
